<resources>
    <string name="app_name">BPT Movil</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña </string>
    <string name="recordar">Recordar</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">BPT Móvil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="actualizar">Actualizar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="Opciones">Opciones</string>


    <string name="positive_button_text">Aceptar</string>
    <string name="dialog_title_text">Mensaje</string>


    <string name="usuario_requerido">el usuario es requerido</string>
    <string name="password_requerido">Contraseña requerida</string>
    <string name="buscar">Buscar</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="title_activity_lista_jumbos">Consulta Jumbos</string>
    <string name="search_hint">Buscar</string>

</resources>
